--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/scout": "^7.1",
         "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^2.0",
         "unisharp/laravel-filemanager": "~1.8"
     },
